# sp-lab2-makefiles

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
